--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,9 +1,42 @@
 @tailwind base;
 @tailwind components;
-@tailwind utilities;
 
 @layer base {
     body {
         font-family: "Public Sans", sans-serif;
     }
 }
+.swiper {
+    width: 100%;
+    height: 100%;
+}
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    /* Center slide text vertically */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    background-color: #fa8232;
+    &::after {
+        font-size: 20px;
+        color: white;
+    }
+}
+
+@tailwind utilities;
